// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/MobileChannelHeaderPlug should match snapshot with no extended component 1`] = `
<MobileChannelHeaderPlug
  channel={Object {}}
  channelMember={Object {}}
  components={Array []}
  isDropdown={false}
  theme={Object {}}
/>
`;

exports[`plugins/MobileChannelHeaderPlug should match snapshot with no extended component, in dropdown 1`] = `
<MobileChannelHeaderPlug
  channel={Object {}}
  channelMember={Object {}}
  components={Array []}
  isDropdown={true}
  theme={Object {}}
/>
`;

exports[`plugins/MobileChannelHeaderPlug should match snapshot with one extended component 1`] = `
<MobileChannelHeaderPlug
  channel={Object {}}
  channelMember={Object {}}
  components={
    Array [
      Object {
        "action": [Function],
        "dropdownText": "some dropdown text",
        "icon": <i
          className="fa fa-anchor"
        />,
        "id": "someid",
        "pluginId": "pluginid",
      },
    ]
  }
  isDropdown={false}
  theme={Object {}}
>
  <li
    className="flex-parent--center"
  >
    <button
      className="navbar-toggle navbar-right__icon"
      onClick={[Function]}
    >
      <span
        className="icon navbar-plugin-button"
      >
        <i
          className="fa fa-anchor"
        />
      </span>
    </button>
  </li>
</MobileChannelHeaderPlug>
`;

exports[`plugins/MobileChannelHeaderPlug should match snapshot with one extended component, in dropdown 1`] = `
<MobileChannelHeaderPlug
  channel={Object {}}
  channelMember={Object {}}
  components={
    Array [
      Object {
        "action": [Function],
        "dropdownText": "some dropdown text",
        "icon": <i
          className="fa fa-anchor"
        />,
        "id": "someid",
        "pluginId": "pluginid",
      },
    ]
  }
  isDropdown={true}
  theme={Object {}}
>
  <li
    className="MenuItem"
    key="mobileChannelHeaderItemsomeid"
    role="presentation"
  >
    <a
      href="#"
      onClick={[Function]}
      role="menuitem"
    >
      some dropdown text
    </a>
  </li>
</MobileChannelHeaderPlug>
`;

exports[`plugins/MobileChannelHeaderPlug should match snapshot with two extended components 1`] = `
<MobileChannelHeaderPlug
  channel={Object {}}
  channelMember={Object {}}
  components={
    Array [
      Object {
        "action": [Function],
        "dropdownText": "some dropdown text",
        "icon": <i
          className="fa fa-anchor"
        />,
        "id": "someid",
        "pluginId": "pluginid",
      },
      Object {
        "action": [Function],
        "dropdownText": "some dropdown text",
        "icon": <i
          className="fa fa-anchor"
        />,
        "id": "someid2",
        "pluginId": "pluginid",
      },
    ]
  }
  isDropdown={false}
  theme={Object {}}
/>
`;

exports[`plugins/MobileChannelHeaderPlug should match snapshot with two extended components, in dropdown 1`] = `
<MobileChannelHeaderPlug
  channel={Object {}}
  channelMember={Object {}}
  components={
    Array [
      Object {
        "action": [Function],
        "dropdownText": "some dropdown text",
        "icon": <i
          className="fa fa-anchor"
        />,
        "id": "someid",
        "pluginId": "pluginid",
      },
      Object {
        "action": [Function],
        "dropdownText": "some dropdown text",
        "icon": <i
          className="fa fa-anchor"
        />,
        "id": "someid2",
        "pluginId": "pluginid",
      },
    ]
  }
  isDropdown={true}
  theme={Object {}}
>
  <li
    className="MenuItem"
    key="mobileChannelHeaderItemsomeid"
    role="presentation"
  >
    <a
      href="#"
      onClick={[Function]}
      role="menuitem"
    >
      some dropdown text
    </a>
  </li>
  <li
    className="MenuItem"
    key="mobileChannelHeaderItemsomeid2"
    role="presentation"
  >
    <a
      href="#"
      onClick={[Function]}
      role="menuitem"
    >
      some dropdown text
    </a>
  </li>
</MobileChannelHeaderPlug>
`;
